US5752 : TA16988 - Updated table to show colored results in completed transfers. Added ellipsize support for the amount column. Fixed issues that were commented on from the last pull request for this story. Fixed null pointer problem during rotation and navigation to review transfers.

--- a/Discover-Bank-Phone/res/layout/bank_table_item.xml
+++ b/Discover-Bank-Phone/res/layout/bank_table_item.xml
@@ -64,6 +64,9 @@
             android:layout_weight="1"
             android:clickable="false"
             android:gravity="right"
+            android:maxEms="9"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:lines="1" />
     </LinearLayout>
 
