--- a/Discover-Bank-Phone/res/layout/table_load_more_footer.xml
+++ b/Discover-Bank-Phone/res/layout/table_load_more_footer.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/groups_of_elements_padding"
-        android:layout_marginTop="@dimen/groups_of_elements_padding" />
+        android:layout_marginTop="@dimen/groups_of_elements_padding"
+        android:visibility="gone" />
 
     <View
         android:id="@+id/line"
