US8198 : TA16979 - Fixed an issue where the header buttons were not on two lines and were too short in some cases.

--- a/Discover-Bank-Phone/res/values/strings_review_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_review_transfers.xml
@@ -10,9 +10,9 @@
     <string name="no_transfers_in_list">You have no %s transfers.</string>
     
     <string-array name="bank_review_transfers_buttons">
-        <item>Scheduled Transfers</item>
-        <item>Completed Transfers</item>
-        <item>Cancelled Transfers</item>
+        <item>Scheduled\nTransfers</item>
+        <item>Completed\nTransfers</item>
+        <item>Cancelled\nTransfers</item>
     </string-array>
 
 </resources>
