US8873 - Changed the workflow for make a payment from add a new payee confirmation to support directly paying that payee.
Test Cases:
- Validated that the cancel button on the schedule payment screen works as per user story.
- Validated that the back button on the schedule payment screen works as per user story.
- Validated the correct payee appears on schedule payment.
- Validated the payment is successful and shows up in review payments.
- Validated that the back button after canceling brings you all the way back to add payee confirmation rather than schedule payment.

--- a/Discover-Bank-Phone/res/values/strings_bank_payees.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payees.xml
@@ -38,6 +38,7 @@
 	<string name="bank_deposit_amount">Deposit Amount</string>
 	<string name="bank_payee_empty">You currently have no payees set up.</string>
 	<string name="bank_payee_none">None of the above</string>
+	<string name="bank_pay_this_payee">Pay This Payee</string>
 	
 	<!-- Delete Payee Modal Strings -->
 	<string name="bank_payee_delete_title">Delete Payee?</string>
