--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -188,7 +188,7 @@
                     android:gravity="center_vertical" >
 
                     <LinearLayout
-                        android:id="@+d/date_layout"
+                        android:id="@+id/date_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
