--- a/Discover-Bank-Phone/res/layout/bank_whats_new_view_pager.xml
+++ b/Discover-Bank-Phone/res/layout/bank_whats_new_view_pager.xml
@@ -2,13 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:weightSum="7">
 
     <ImageView
         android:id="@+id/whats_new_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
         android:contentDescription="@string/empty"
         android:scaleType="fitXY" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4" >
+
+        <include
+            android:id="@+id/whats_new_text"
+            layout="@layout/bank_whats_new_view_pager_text" />
+    </RelativeLayout>
 
 </LinearLayout>
