--- a/Discover-Bank-Phone/res/layout/bank_edit_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_edit_detail_view.xml
@@ -40,7 +40,6 @@
             android:layout_below="@+id/top_label"
             android:layout_alignLeft="@+id/top_label"
             android:singleLine="true"
-            android:background="@drawable/common_edit_text_grey_line"
             android:text="@string/edit" />
 
         <com.discover.mobile.bank.payees.PayeeValidatedEditField
@@ -53,7 +52,8 @@
             android:imeOptions="flagNoExtractUi|actionDone"
             android:inputType="textNoSuggestions"
             android:singleLine="true"
-            android:textCursorDrawable="@null" />
+            android:textCursorDrawable="@null"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/error_label"
