US9316  - Android: Change Enrollment Flow
Tested
- Using mock service - a customer eligible/un-enrolled in mobile check deposit
- Using mock service - a customer eligible/un-enrolled in transfer funds
- Using mock service - a customer eligible/un-enrolled in pay bills service
- Using mock service - a customer un-eligible/un-enrolled in mobile check deposit
- Using mock service - a customer un-eligible/un-enrolled in transfer funds
- Using mock service - a customer un-eligible/un-enrolled in pay bills service
- Using live service - a customer enrolled in mobile check deposit
- Using live service - a customer enrolled in pay bills from pay bills navigation menu item
- Using live service - a customer enrolled in pay bills from review payments navigation menu item
- Using live service - a customer enrolled in pay bills from manage payees navigation menu item
- Using live service - a customer enrolled in transfers from Money Transfers navigation menu item
- Using live service - a customer enrolled in transfers from review Transfers navigation menu item

--- a/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="transfers_page_title">Welcome to Money Transfers</string>
     <string name="transfer_money">Transfer Money</string>
     <string name="schedule_transfer">Schedule Transfer</string>
     <string name="schedule_another_transfer">Schedule Another Transfer</string>
