--- a/Discover-Bank-Phone/res/layout-land/bank_whats_new_content_view.xml
+++ b/Discover-Bank-Phone/res/layout-land/bank_whats_new_content_view.xml
@@ -4,47 +4,42 @@
     android:layout_height="wrap_content" >
 
     <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bank_whats_new_action_bar_height"
+        android:background="@color/orange_link_idicator"
+        android:gravity="center_vertical" >
 
-        <RelativeLayout
-            android:id="@+id/header"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/bank_whats_new_action_bar_height"
-            android:background="@color/orange_link_idicator"
-            android:gravity="center_vertical" >
+        <TextView
+            android:id="@+id/title"
+            style="@style/bank_whats_new_action_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="@dimen/groups_of_elements_padding"
+            android:layout_toLeftOf="@+id/close"
+            android:gravity="center_vertical"
+            android:text="@string/bank_whats_new_action_bar_title" />
 
-            <TextView
-                android:id="@+id/title"
-                style="@style/bank_whats_new_action_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="@dimen/groups_of_elements_padding"
-                android:layout_toLeftOf="@+id/close"
-                android:gravity="center_vertical"
-                android:text="@string/bank_whats_new_action_bar_title" />
-
-            <ImageButton
-                android:id="@+id/close"
-                android:layout_width="@dimen/bank_whats_new_action_bar_height"
-                android:layout_height="fill_parent"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/bank_whats_new_action_button_selector"
-                android:contentDescription="@string/empty"
-                android:padding="@dimen/groups_of_elements_padding"
-                android:paddingRight="@dimen/groups_of_elements_padding"
-                android:src="@drawable/x_gray" />
-        </RelativeLayout>
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/header" />
+        <ImageButton
+            android:id="@+id/close"
+            android:layout_width="@dimen/bank_whats_new_action_bar_height"
+            android:layout_height="fill_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/bank_whats_new_action_button_selector"
+            android:contentDescription="@string/empty"
+            android:padding="@dimen/groups_of_elements_padding"
+            android:paddingRight="@dimen/groups_of_elements_padding"
+            android:src="@drawable/x_gray" />
     </RelativeLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/header" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,9 +52,9 @@
             android:id="@+id/page_indicators"
             android:layout_width="0dp"
             android:layout_height="@dimen/bank_whats_new_footer_height"
+            android:layout_weight="1"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_weight="1" />
+            android:orientation="horizontal" />
     </LinearLayout>
 
 </RelativeLayout>
