US7225 - 13.4 - 07/08/2013 Clearcase Merge - Discover-Card Project

--- a/Discover-Card-Phone/res/layout/modal_default_top_view.xml
+++ b/Discover-Card-Phone/res/layout/modal_default_top_view.xml
@@ -7,8 +7,8 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:paddingLeft="20dp"
-	    android:paddingRight="20dp">
+	    android:paddingLeft="24dp"
+	    android:paddingRight="24dp">
 	   
 		<ImageView
 	        android:id="@+id/error_icon"
@@ -16,10 +16,10 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:adjustViewBounds="true"
-	        android:src="@drawable/error_icon_red"
+	        android:src="@drawable/esclamation_red_img"
 	        android:visibility="gone"
-	        android:layout_marginRight="10dp"
-	        android:layout_marginTop="20dp"/>
+	        android:layout_marginRight="8dp"
+	        android:layout_marginTop="24dp"/>
 	        
 	   	<TextView 
 	        android:id="@+id/modal_alert_title"
@@ -27,11 +27,9 @@
 	        android:layout_height="wrap_content"
 	        android:layout_toRightOf="@+id/error_icon"
 	        android:includeFontPadding="false"
-	        android:layout_marginBottom="8dp"
-    	    android:layout_marginTop="12dp"
-  			android:textSize="24dp"
-  			android:paddingTop="4dp"
-  			android:paddingBottom="4dp"
+	        android:layout_marginBottom="12dp"
+    	    android:layout_marginTop="20dp"
+  			android:textSize="26dp"
      	    android:textColor="#293033"
      	    android:textStyle="bold"/>
 	    <TextView
@@ -40,10 +38,8 @@
 	        android:layout_height="wrap_content"
 	        android:includeFontPadding="false"
 	        android:layout_below="@+id/modal_alert_title"
-	        android:textColor="#576166"
-			android:textSize="16dp"
-  			android:paddingTop="4dp"
-  			android:paddingBottom="4dp"
+	        android:textColor="#3d484d"
+			android:textSize="18dp"
 	        android:textStyle="normal"
 	        android:layout_marginBottom="40dp"/>
 	  <RelativeLayout
