--- a/Discover-Card-Phone/res/layout/register_create_password.xml
+++ b/Discover-Card-Phone/res/layout/register_create_password.xml
@@ -18,7 +18,7 @@
             style="@style/WhiteTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
+            android:paddingTop="18dp"
             android:focusable="true"
             android:focusableInTouchMode="true" >
 
@@ -30,7 +30,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
-                android:text="@string/account_info_bad_input_error_text" />
+                android:text="@string/account_info_bad_input_error_text" 
+                android:textSize="14sp"
+                android:textStyle="normal"/>
 
             <RelativeLayout
                 android:id="@+id/account_info_error_label_layout"
@@ -46,7 +48,7 @@
                     android:layout_marginTop="@dimen/forms_inner_padding"
                     android:contentDescription="@string/discover_copyright_text"
                     android:paddingTop="4dp"
-                    android:src="@drawable/error_icon_red"
+                    android:src="@drawable/esclamation_red_img"
                     android:visibility="gone" />
 
                 <TextView
@@ -57,8 +59,10 @@
                     android:layout_toRightOf="@+id/icon"
                     android:includeFontPadding="false"
                     android:text="@string/account_info_two_id_matches_pass_error_text"
-                    android:textColor="@color/red"
-                    android:visibility="gone" />
+                    android:textColor="#293033"
+                    android:visibility="gone"
+                    android:textSize="14sp"
+                    android:textStyle="normal" />
             </RelativeLayout>
 
             <TextView
@@ -79,7 +83,7 @@
                 android:layout_marginTop="18dp"
                 android:includeFontPadding="false"
                 android:text="@string/forgot_pass_create_new_text"
-                android:textSize="16dp" />
+                android:textSize="14sp" />
 
             <com.discover.mobile.card.login.register.CredentialStrengthEditText
                 android:id="@+id/account_info_two_pass_field"
@@ -88,8 +92,9 @@
                 android:layout_below="@+id/forgot_pass_two_pass_label"
                 android:imeOptions="actionNext"
                 android:textColor="#8a9499"
+                android:layout_marginLeft="4dp"
                 android:textCursorDrawable="@null"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -113,7 +118,7 @@
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"
                 android:text="@string/account_info_two_pass_info_text"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textStyle="normal" />
 
             <TextView
@@ -123,11 +128,11 @@
                 android:layout_above="@+id/account_info_two_pass_field"
                 android:layout_alignRight="@+id/account_info_two_pass_field"
                 android:layout_marginTop="18dp"
-                android:layout_marginBottom="2dp"
+                
                 android:includeFontPadding="false"
                  android:text="@string/strength_text"
                 android:textColor="#8a9499"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textStyle="normal" />
 
             <TextView
@@ -143,7 +148,7 @@
                 android:paddingTop="4dp"
                  android:textColor="#8a9499"
                 android:text="@string/account_info_two_new_pass_confirm_text"
-                android:textSize="14dp" />
+                android:textSize="14sp" />
 
             <com.discover.mobile.card.common.uiwidget.ConfirmationEditText
                 android:id="@+id/account_info_two_pass_confirm_field"
@@ -154,7 +159,7 @@
                 android:inputType="textPassword"
                 android:textColor="#8a9499"
                 android:textCursorDrawable="@null"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textStyle="normal" />
 
             <TextView
