--- a/Discover-Card-Phone/res/layout/old_general_need_help_footer.xml
+++ b/Discover-Card-Phone/res/layout/old_general_need_help_footer.xml
@@ -13,7 +13,10 @@
             android:layout_height="wrap_content"
             android:text="@string/need_help_text"
             android:layout_centerHorizontal="true"
-            style="@style/need_help_text" />
+            android:textColor="#293033"
+            android:textStyle="normal"
+            android:textSize="14dp"
+            />
 
 	    <TextView
 	        android:id="@+id/help_number_label"
@@ -22,10 +25,12 @@
 	        android:layout_centerHorizontal="true"
 	        android:layout_below="@+id/need_help_label"
 	        android:text="@string/need_help_number_text"
-	        style="@style/contact_no_hyperlink"
 	        android:paddingRight="@dimen/content_padding"
 	        android:paddingLeft="@dimen/content_padding"
 	        android:paddingBottom="4dp"
+	        android:textColor="#267bb1"
+	        android:textSize="14dp"
+	        android:textStyle="normal"
 	        />
     </RelativeLayout>  
 
