--- a/Discover-Card-Phone/res/layout/register_enter_account_info.xml
+++ b/Discover-Card-Phone/res/layout/register_enter_account_info.xml
@@ -27,14 +27,15 @@
 
             <TextView
                 android:id="@+id/forgot_password"
-                style="@style/title_copy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/header"
+                android:layout_marginTop="14dp"
                 android:includeFontPadding="false"
                 android:text="@string/forgot_password_text"
                 android:textColor="#293033"
-                android:textSize="14dp" />
+                android:textSize="14dp"
+                android:textStyle="normal" />
 
             <TextView
                 android:id="@+id/account_info_label_one_label"
@@ -42,7 +43,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_error_label_layout"
-                android:layout_marginBottom="6dp"
                 android:layout_marginTop="18dp"
                 android:includeFontPadding="false"
                 android:text="@string/account_info_label_one"
@@ -55,21 +55,19 @@
                 android:layout_height="@dimen/input_field_height"
                 android:layout_below="@+id/account_info_label_one_label"
                 android:imeOptions="actionDone"
-                android:textColor="#8a9499"
+                android:textColor="#293033"
                 android:textCursorDrawable="@null"
-                android:textSize="18dp"
-                />
+                android:textSize="18dp" />
 
             <TextView
                 android:id="@+id/account_information_input_info_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_card_account_number_error_label"
-                android:layout_marginTop="2dp"
+                android:layout_marginTop="6dp"
                 android:includeFontPadding="false"
-                android:paddingTop="4dp"
                 android:text="@string/account_info_input_restrictions_label"
-                android:textColor="@color/sub_copy"
+                android:textColor="#8a9499"
                 android:textSize="14dp"
                 android:textStyle="normal" />
 
@@ -130,9 +128,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_expiration_date_error_label"
-                android:includeFontPadding="false"
-                android:layout_marginBottom="6dp"
                 android:layout_marginTop="18dp"
+                android:includeFontPadding="false"
                 android:text="@string/account_info_ssn_info_text"
                 android:textColor="#8a9499"
                 android:textSize="14dp" />
@@ -144,10 +141,9 @@
                 android:layout_below="@+id/account_info_ssn_info_label"
                 android:layout_toRightOf="@+id/account_info_ssn_prefix_label"
                 android:imeOptions="actionDone"
-                android:textColor="#8a9499"
+                android:textColor="#293033"
                 android:textCursorDrawable="@null"
-                android:textSize="18dp"
-                 />
+                android:textSize="18dp" />
 
             <TextView
                 android:id="@+id/account_info_ssn_prefix_label"
@@ -155,8 +151,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/account_info_ssn_info_label"
+                android:layout_marginTop="12dp"
                 android:paddingRight="4dp"
-                android:layout_marginTop="36dp"
                 android:text="@string/ssn_prefix"
                 android:textColor="#8a9499"
                 android:textSize="14dp"
@@ -204,6 +200,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="14dp"
                 android:layout_marginTop="40dp"
+                android:background="@drawable/orange_normal_btn"
                 android:onClick="validateInfoAndSubmitOnSuccess"
                 android:text="@string/continue_text" />
 
@@ -229,7 +226,7 @@
                 android:layout_below="@+id/account_info_card_expiration_date_label"
                 android:textColor="#8a9499"
                 android:textSize="18dp"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <TextView
                 android:id="@+id/account_info_expiration_date_error_label"
@@ -247,7 +244,7 @@
                 android:layout_below="@+id/account_info_dob_label"
                 android:textColor="#8a9499"
                 android:textSize="18dp"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <RelativeLayout
                 android:id="@+id/footer"
