--- a/Discover-Card-Phone/res/layout/securityquestionlist.xml
+++ b/Discover-Card-Phone/res/layout/securityquestionlist.xml
@@ -18,7 +18,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:maxLines="1"
-            android:paddingLeft="12dp"
+            android:paddingLeft="16dp"
             android:text="@string/sa_title"
             android:textColor="@color/blue_grey"
             android:textSize="18dp"
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@color/stroke_ruling_line"
-            android:src="@drawable/gradiant_line" />
+            android:src="@drawable/header_bottomline" />
     </RelativeLayout>
 
     <RelativeLayout
