--- a/Discover-Card-Phone/res/values/strings_passcode.xml
+++ b/Discover-Card-Phone/res/values/strings_passcode.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="app_name">Passcode</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="reenter_pass">Re-enter your passcode.</string>
@@ -18,6 +19,15 @@
     <string name="incorrect_passcode">Incorrect passcode.
  Please try again.</string>
     <string name="passcode_dialog_created_title">Passcode Created</string>
+    <string name="passcode_dialog_created_content">
+        <![CDATA[
+		    You have successfully created your 4-digit Passcode.  The next time you enter the app you\'ll be asked to login with your new Passcode.
+		    <br/>
+		    Remember, <b>your Passcode is only enabled on this device</b>. However, you can enable the same Passcode on other devices.
+		    <br/>
+		    Don\'t worry, you can always log in with your User ID and Password at any time if you forget your Passcode.
+		]]>
+	</string>
     <string name="passcode_dialog_created_paragraph_1">You have successfully created your 4-digit Passcode.  The next time you enter the app you\'ll be asked to login with your new Passcode.</string>
     <string name="passcode_dialog_created_paragraph_2"><![CDATA[Remember, <b>your Passcode is only enabled on this device</b>. However, you can enable the same Passcode on other devices.]]></string>
     <string name="passcode_dialog_created_paragraph_3">Don\'t worry, you can always log in with your User ID and Password at any time if you forget your Passcode.</string>
@@ -30,12 +40,33 @@
     <string name="passcode_dialog_updated_paragraph_1">Your Passcode Has been successfully updated! The next time you enter the app you\'ll be asked to log in with your updated Passcode.</string>
     <string name="passcode_dialog_updated_paragraph_2"><b>If you have other Passcode-enabled devices, they have been updated wtih your new Passcode.</b></string>
     <string name="passcode_dialog_disabled_title">Passcode Disabled</string>
+    <string name="passcode_dialog_disabled_content">
+        <![CDATA[
+		    <b>Your passcode has been disabled on this device.</b>
+		    <br/>
+		    The next time you enter the app you\'ll be asked to log in with your User ID and Password.
+		    <br/>
+		    You may set up a new Passcode at anytime.
+		]]>
+	</string>
     <string name="passcode_dialog_disabled_paragraph_1"><b>Your passcode has been disabled on this device.</b></string>
     <string name="passcode_dialog_disabled_paragraph_2">The next time you enter the app you\'ll be asked to log in with your User ID and Password.</string>
     <string name="passcode_dialog_disabled_paragraph_3">You may set up a new Passcode at anytime.</string>
     <string name="passcode_dialog_enabled_title">Passcode Enabled</string>
-    <string name="passcode_dialog_enabled_paragraph_1"><b>Your Passcode has been enabled on this device</b>. The next time you enter the app you\'ll be asked to log in with this Passcode.</string>
+    <string name="passcode_dialog_enabled_content"><b>Your Passcode has been enabled on this device</b>. The next time you enter the app you\'ll be asked to log in with this Passcode.</string>
     <string name="passcode_dialog_guidelines_title">Passcode Guidelines</string>
+    <string name="passcode_dialog_guidelines_content">
+        <![CDATA[When creating your 4-digit Passcode please keep in mind these guidelines. Your Passcode cannot be any of the following:
+        <br/>
+		    <br/>•Your date of birth (MMDD or MMYY, i.e. 0116 or 0186)
+		    <br/>•The last 4 digits of your Social Security Number
+		    <br/>•4 consecutive numbers (i.e. 1,2,3,4 or 4,3,2,1)
+		    <br/>•The same number (i.e. 2,2,2,2)
+		    <br/>•The last 4 digits of your account number
+		    <br/>•The street number on the account
+		    <br/>•The first 4 digits of your credit card number (6011)
+		]]>
+	</string>
     <string name="passcode_dialog_guidelines_paragraph_1">When creating your 4-digit Passcode please keep in mind these guidelines. Your Passcode cannot be any of the following:</string>
     <string name="passcode_dialog_guidelines_paragraph_2">• Your date of birth (MMDD or MMYY, i.e. 0116 or 0186)</string>
     <string name="passcode_dialog_guidelines_paragraph_3">• The last 4 digits of your Social Security Number</string>
@@ -67,5 +98,13 @@
     <string name="passcode_menu_disable_passcode">Disable Passcode</string>
     <string name="passcode_enable_step2_header"><Data><![CDATA[ Please enter your <b>current</b> Passcode to enable it. ]]></Data></string>
     <string name="passcode_disable_step1_header"><Data><![CDATA[ Please enter your <b>current</b> Passcode to disable it. ]]></Data></string>
+    <string name="passcode_dialog_disabled_not_bound_message">You recently requested to disable Passcode login. Please log in with your User ID and Password.  You can set up a new Passcode after logging in.</string>
+    <string name="passcode_dialog_disable_are_you_sure_title">Disable Passcode</string>
+    <string name="passcode_dialog_disable_are_you_sure_content">Are you sure you want to disable Passcode on this device?</string>
+
+    <string name="passcode_dialog_forgot_title">Passcode Reset</string>
+    <string name="passcode_dialog_forgot_content">You have successfully reset your 4-digit Passcode. Your new Passcode applies to all devices enabled with Passcode.</string>
+    <string name="passcode_forgot_step1_header">Create your new 4-digit Passcode to use when you sign in.</string>
+    <string name="passcode_forgot_step2_header">Verify your Passcode.</string>
 
 </resources>
