DE6652 WHAT'S NEW - UPDATE - DO NOT CAPITALIZE TITLE Removed capitalization on the whats new screen to match the comps.  Tested by uninstalling app, reinstalling and logged in.  Once the what's new screen presented itself I compared the app with the comps provided through rally.

--- a/Discover-Bank-Phone/res/values/strings_bank_whats_new.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_whats_new.xml
@@ -9,8 +9,8 @@
     
     <!-- List of titles that will be displayed in the view pager -->
     <array name="bank_whats_new_titles">
-        <item>Pin Down the Nearest ATM</item>
-        <item>ATMs at Your Fingertips</item>
+        <item>Pin down the nearest ATM</item>
+        <item>ATMs at your fingertips</item>
     </array>
     
         <!-- List of content that will be displayed in the view pager -->
